# velocity

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  VELOCITY_PRODUCT_VISION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vite.config.ts
.github/workflows/: check.yml  release.yml
apps/desktop/: README.md  app.zon  build.zig  build.zig.zon  package.json
apps/site/: package.json
apps/web/: package.json
docs/architecture/: 0001-platform-convergence.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs
src/components/: AgentDock.tsx  AgentPanel.tsx  AgentsMenu.tsx  AppsPanel.tsx  ArcSidebar.tsx  BrowserSidebar.tsx  CockpitModeMenu.tsx  CommandBar.tsx  CommandHeader.tsx  CommandPalette.tsx  EditorSettings.tsx  HeaderMenu.tsx  MapView.tsx  ModeDropdown.tsx  ModeRail.tsx  ModelPicker.tsx  PaneChrome.tsx  ProjectRail.tsx  QuickOpen.tsx  ReviewView.tsx  ShareSheet.tsx  ShortcutHelp.tsx  Sidebar.tsx  SplitView.tsx  StatusBar.tsx  TabRail.tsx  TabStrip.tsx  TodoIndex.tsx
src/editor/: CodeMirrorHost.tsx  activeView.ts  languages.ts  theme.ts
src/keybindings/: defaults.ts  registerAppCommands.ts  when.ts
src/lib/: db.ts  design.ts  graph.ts  icons.tsx  openFile.ts  recentFiles.ts  store.ts  tree.ts  types.ts
src/modes/: AgentsMode.tsx  BrowserMode.tsx  BuilderMode.tsx  DatabaseStudio.tsx  DesignStudio.tsx  EditorMode.tsx  HomeDashboard.tsx  LibraryMode.tsx  MissionControl.tsx  TerminalMode.tsx  (+3 more)
(+129 files in other folders)
