[package]
name = "velocity"
version = "0.1.0"
description = "A local-first developer workstream environment"
authors = ["Velocity contributors"]
edition = "2021"

[lib]
name = "velocity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
